desktop/sources/links/main.css
@charset "utf-8";

:root { --font-size: 12px; --line-height: 20px; --font-family: 'custom_mono'; }

::-webkit-scrollbar { display: none; margin: 0; padding: 0; }

body { height: 100vh; font-family: var(--font-family); font-size: 12px; overflow: auto; transition: background-color 500ms,filter 150ms; overflow: hidden;}
body navi { display: block;width: calc((100vw / 4) - 55px);left: 0px;position: absolute;padding: 30px 0px 0px 30px; -webkit-user-select: none;-webkit-app-region: drag;overflow: auto;padding-top:30px;transition: opacity 200ms 200ms, translateY 150ms, width 200ms; opacity:1; height: calc(100vh - 120px); padding-bottom: 40px;}
body navi li { display: flex; flex-direction: row; justify-content: space-between; align-items: center; line-height: 20px; cursor: pointer; position: relative; -webkit-app-region: no-drag; height:20px;}
body navi li span { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; }
body navi li::before { position: absolute; left:-15px;}
body navi li:hover { text-decoration: none; }
body navi li.page { white-space: nowrap; }
body navi li.header { }
body navi li.note { padding-left:15px;}
body navi li.note::before { content:"#"; left:0px; }
body navi li.subheader { padding-left: 15px;}
body navi li.subheader::before { content:""; left:0px; }
body navi li.comment { padding-left: 30px;}
body navi li.comment::before { content:""; left:0px; }
body navi li.changes::after { content:"*"; position: absolute; right: 15px; }
body navi li i { padding-right:15px; }
body navi > ul {}
body navi > ul li.marker { display: none }
body navi > ul.active li.marker { display: block }
body navi > ul li.active.page::before { content:"/"; }
body stats { display: block; border-bottom: 0; margin-top: 30px; position: fixed; bottom: 0; left: 25vw; line-height: 15px; width: calc(75vw - 40px); height: 40px; overflow: auto; -webkit-user-select: none; -webkit-app-region: drag; transition: left 200ms; }
body stats i {text-decoration: underline; }
body stats .right { float: right; }
body stats ul { height: 100%; display: inline; overflow: scroll; white-space: nowrap; }
body stats li { display: inline; margin-right: 10px; }
body stats li.active { text-decoration: underline; font-weight: bold; }

body #editor { font-family: var(--font-family); padding: 30px 15px 0; height: calc(100vh - 90px); display: block; width: 73%; position: fixed; left: 26vw; font-size: var(--font-size); line-height: var(--line-height); background: transparent; overflow: auto; max-width: 90%; transition: left 200ms; margin-left:-15px; }
body #number { text-align: center; color: var(--f_med); font-family: var(--font-family); padding: 30px 0 0; height: calc(100vh - 90px); display: block; width: 4ch; position: absolute; left: 25vw; font-size: var(--font-size); line-height: var(--line-height); overflow: hidden; max-width: 90%; transition: left 200ms; margin-left: -30px; }
body div { left: 25vw; max-width:600px; width:80ch; line-height: var(--line-height); font-family: var(--font-family); font-size: var(--font-size); white-space: pre-wrap; word-wrap:break-word; }
body drag { display: block;width: 100vw;height: 30px;position: fixed;top: 0px;-webkit-user-select: none;-webkit-app-region: drag; background-color: transparent !important;}

body #operator { display: block;border-bottom: 0px;margin-top: 30px;position: fixed;bottom: 0px;left: 25vw;;line-height: 40px;width:calc(75vw - 40px);height: 40px;overflow: hidden;-webkit-user-select: none;-webkit-app-region: no-drag; bottom:-40px; transition: bottom 150ms }
body #operator.inactive { bottom:-40px; }
body #operator.active { bottom:0px; }

* { background-color: inherit; }

body.mobile navi { opacity:0; transition: opacity 10ms; }
body.mobile #editor { width: 100vw; left: 5%; transition: left 200ms; transition-delay: 20ms; }
body.mobile stats { width: 85%; left: 5%; transition: left 200ms; transition-delay: 20ms; }
body.mobile div { width: 100vw; }
body.mobile #operator { width: 85%; left: 5%; }

body #theme_button { width: 40px;height: 40px;position: fixed;right: 0px;bottom: 0px;overflow: hidden; cursor: pointer; opacity: 0; transition: opacity 500ms }
body #theme_button_icon { border: 1px solid white;width: 10px;height: 10px;position: absolute;left: 14.5px;top: 14.5px;border-radius: 30px;overflow: hidden; }
body #theme_button_icon_fg { max-width: 20px; width: 20px;height: 6.5px;background: white;position: relative;left: -2px;top: -2px; transition: top 250ms; }
body #theme_button.active #theme_button_icon_fg { top:5.5px; }
body #theme_button:hover { opacity: 1 }

